fix: Wrap longer URLs in Toast

--- a/src/kit/Toast.module.scss
+++ b/src/kit/Toast.module.scss
@@ -1,5 +1,6 @@
 .message {
   display: flex;
+  word-break: break-word;
 
   span {
     margin-right: var(--spacing-xs);
